[tool.poetry]
name = "eodc-cluster-image"
version = "1.0.0"
description = ""
authors = ["Tobias Stachl <tobias.stachl@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
eodc = "2025.6.1"
dask-gateway = "<=2024.5.2"
# Dask minimum 2024.4.1. 2024.4.0 breaks on Python 3.11.9!
dask = {extras = ["array", "dataframe", "distributed"], version = "<=2024.5.2"}
rioxarray = "^0.17.0"
odc-stac = "^0.3.10"
zarr = "^2.18.4"
bokeh = "^3.6.3"
stactools = "^0.5.3"
pystac-client = "^0.8.6"
pytileproj = "^0.0.17"
pyproj = "^3.7.0"
lz4 = "^4.4.3"
s3fs = "^2025.2.0"
fsspec = "^2025.2.0"
jinja2 = ">=3.1.6"
matplotlib = "^3.10.3"
rich = "^14.0.0"
cytoolz = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
