[tool.poetry]
name = "eodc-cluster-image"
version = "1.0.0"
description = ""
authors = ["Tobias Stachl <tobias.stachl@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# Dask minimum 2024.4.1. 2024.4.0 breaks on Python 3.11.9!
eodc-connect = "^0.0.2"
s3fs = "^2025.9.0"
rioxarray = "^0.19.0"
odc-stac = "^0.4.0"
pystac-client = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
