[tool.poetry]
name = "cluster-image"
version = "2025.9.2"
description = ""
authors = ["Tobias Stachl <tobias.stachl@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.10,<3.13"
eodc-connect = "^0.0.2"
s3fs = "^2025.9.0"
rioxarray = "^0.19.0"
odc-stac = "^0.4.0"
pystac-client = "^0.9.0"
bokeh = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
